fix: icons spacing

--- a/home/programs/waybar/style.css
+++ b/home/programs/waybar/style.css
@@ -112,32 +112,34 @@ window#waybar.hidden {
 #battery,
 #network {
   background-color: #252733;
-  padding: 0em 2em;
 
   font-size: 20px;
 
-  padding-left: 7.5px;
-  padding-right: 7.5px;
-
-  padding-top: 3px;
-  padding-bottom: 3px;
+  padding: 0px 18px 0px 15px;
 
   margin-top: 7px;
   margin-bottom: 7px;
 
+  border-radius: 8px;
+  
   font-size: 20px;
 }
 
 #custom-pipewire {
   color: #81A1C1;
-  padding-left: 9px;
-  font-size: 22px;
+
+  font-size: 24px;
+  
+  border-radius: 8px;
+  padding: 0 13px 0 13px;
+  margin-right: 1px;
+  margin-left: 8px;
+  margin-top: 7px;
+  margin-bottom: 7px;
 }
 
 #custom-pipewire.muted {
   color: #fb958b;
-  padding-left: 9px;
-  font-size: 22px;
 }
 
 #backlight {
@@ -148,12 +150,7 @@ window#waybar.hidden {
 }
 
 #network {
-  padding-left: 0.2em;
   color: #5E81AC;
-  border-radius: 8px 0px 0px 8px;
-  padding-left: 12px;
-  padding-right: 14px;
-  font-size: 20px;
 }
 
 #network.disconnected {
@@ -232,7 +229,7 @@ window#waybar.hidden {
 tooltip {
   font-family: Iosevka Nerd Font;
   border-radius: 15px;
-  padding: 15px;
+  padding: 20px;
   background-color: #1f232b;
 }
 
